1.6
  * updated filters: remove more imdb ads, replace <marquee> with
    <span>
  * Recognise "<! --" HTML comments
    Changed files: wc/parser/htmllex.l
  * ...

1.5
  * - increase TCP dns query timeout from 10 to 20 seconds
    - remember dns errors and return them
    Changed files: wc/proxy/dns_lookups.py
  * recognize .ico and .jpeg as images
    Changed files: wc/filter/Blocker.py
  * - updated and reorganized filters
    - remove onmouseover redirects
    Changed files: config/*.zap, config/bl2wc.py
  * - when type/encoding header is not what we guessed, fix only some
      contents, not all
    - dont guess type/encoding on 304 Not Modified answers, this info
      is already cached
    Changed files: wc/proxy/HttpServer.py
  * - use flex memory management interface
    - use only double quotes for attribute quoting
    - check quoting of all attributes
    Changed files: wc/parser/htmllex.l
  * add TAL packages for web configuration
    Added files: wc/webgui/*
  * add header test fetcher
    Added files: test/head.py

1.4
  * blocked.html has no content anymore and displays much cleaner
    Changed files: config/blocked.html
  * remove old and superfluous options from webcleanerconf, added
    tooltip help, fixed host config parsing
    Changed files: wc/gui/*.py, wc/__init__.py
  * - ignore invalid html attribute characters
    - ignore trailing garbage on html end tags
    - fixed debugging code with flex
    Changed files: wc/parser/htmllex.l
  * build with flex 2.5.25
    Changed files: wc/parser/{Makefile, htmllex.c}

1.3
  * Updated advert filters
    Changed files: config/adverts.zap
  * Local HTML configuration
    Changed files: wc/proxy/ClientServerMatchMaker.py
    Added files: wc/webgui/{__init__.py, WebConfig.py}
  * Added README.parser and README.sshtunnel to documents
  * import DeflateStream, fixes pages with content-encoding: deflate
    Changed files: wc/proxy/HttpServer.py
  * Add netmask support for allowed/denied host configuration