@@ -1,9 +1,15 @@
 1.6
-  * updated filters: remove more imdb ads, replace <marquee> with
+  * updated filters: remove more ads, replace <marquee> with
     <span>
-  * Recognise "<! --" HTML comments
+  * Recognise "<! --" HTML comments (seen at Eonline)
     Changed files: wc/parser/htmllex.l
-  * ...
+  * Reorganize some code
+    Changed files: a lot
+    Added files: wc/i18n.py, wc/AnsiColor.py, wc/debug.py,
+      wc/XmlUtils.py
+    Removed files: wc/debug_levels.py
+  * working TAL template example, lets see how this integrates into
+    WebCleaner local file handling
 
 1.5
   * - increase TCP dns query timeout from 10 to 20 seconds
